# irex_demo

./: .clang-format  .gitignore  CMakeLists.txt  README.md  package.xml
launch/: enable_robot.launch
src/: dualsense.cpp  preshape.hpp  single_glass_placer.cpp  test_open_dualsense.cpp  test_ur_vel_handler.cpp  ur_pose_selector.cpp  ur_teleop.cpp  ur_twist_manager.hpp  ur_velocity_test.cpp  webcome.cpp
